# nanoPTQ

./: .gitignore  CHANGELOG.md  CLAUDE.md  PLAN.md  README.md  README.zh.md  pyproject.toml  requirements.txt
data/: README.md  README.zh.md
data/calibration/: wikitext2_train_128.jsonl
data/eval/: wikitext2_test.jsonl
docs/: Glossary.md  Glossary.zh.md  README.md  README.zh.md  flow.md  flow.zh.md
docs/superpowers/plans/: 2026-04-10-nanoptq.md
examples/: README.md  README.zh.md  awq_explained.py  compare_methods.py  precision_tour.py  quant_model.py
nanoptq/: README.md  README.zh.md  __init__.py  cli.py
nanoptq/algorithms/: README.md  README.zh.md  __init__.py  awq_lite.py  gptq_lite.py  rtn.py
nanoptq/core/: README.md  README.zh.md  __init__.py  group_quant.py  quant_primitives.py
nanoptq/data/: README.md  README.zh.md  __init__.py  loader.py
nanoptq/eval/: README.md  README.zh.md  __init__.py  latency.py  ppl.py
nanoptq/io/: README.md  README.zh.md  __init__.py  safetensors_io.py
nanoptq/model/: README.md  README.zh.md  __init__.py  hf_loader.py  quant_linear.py
scripts/: README.md  README.zh.md  prepare_data.py
tests/: README.md  README.zh.md  test_awq_lite.py  test_data_loader.py  test_gptq_lite.py  test_group_quant.py  test_hf_loader.py  test_ppl.py  test_quant_linear.py  test_quant_primitives.py  test_rtn.py  test_safetensors_io.py
