[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "nanoptq"
version = "0.1.0"
description = "Minimal post-training quantization — one file, one idea"
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = [
    "torch>=2.2.0",
    "transformers>=4.40.0",
    "safetensors>=0.4.0",
    "datasets>=2.18.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-cov"]

[project.scripts]
nanoptq = "nanoptq.cli:main"

[tool.setuptools.packages.find]
include = ["nanoptq*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
